added basic login functionality

--- a/Carethy/AndroidManifest.xml
+++ b/Carethy/AndroidManifest.xml
@@ -21,11 +21,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>       
-         <activity
+        </activity>
+        <activity
             android:name="com.carethy.activity.DisplayResultActivity"
-            android:parentActivityName="com.carethy.activity.MainActivity"> 
-         </activity>
+            android:parentActivityName="com.carethy.activity.MainActivity" >
+        </activity>
+        <activity
+            android:name="com.carethy.activity.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name="com.carethy.activity.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:parentActivityName="com.example.loginapp.LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.loginapp.LoginActivity" />
+        </activity>
     </application>
 
 </manifest>
