Connection to mongodb and fitbit

--- a/Carethy/AndroidManifest.xml
+++ b/Carethy/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -36,17 +38,19 @@
             android:label="@string/title_activity_register"
             android:parentActivityName="com.carethy.activity.LoginActivity" >
         </activity>
-        
         <activity
             android:name="com.carethy.activity.TermsConditionsActivity"
             android:label="@string/title_activity_terms"
             android:parentActivityName="com.carethy.activity.RegisterActivity" >
         </activity>
-        
         <activity
-			android:name="com.carethy.activity.PasswordRecoveryActivity"
-			android:label="@string/title_activity_password_recovery"
-			android:parentActivityName="com.carethy.activity.LoginActivity">
+            android:name="com.carethy.activity.PasswordRecoveryActivity"
+            android:label="@string/title_activity_password_recovery"
+            android:parentActivityName="com.carethy.activity.LoginActivity" >
+        </activity>
+        <activity
+            android:name="com.carethy.activity.FitbitActivity"
+            android:label="@string/title_activity_fitbit" >
         </activity>
     </application>
 
