--- a/Carethy/AndroidManifest.xml
+++ b/Carethy/AndroidManifest.xml
@@ -36,17 +36,20 @@
             android:label="@string/title_activity_register"
             android:parentActivityName="com.carethy.activity.LoginActivity" >
         </activity>
-        
         <activity
             android:name="com.carethy.activity.TermsConditionsActivity"
             android:label="@string/title_activity_terms"
             android:parentActivityName="com.carethy.activity.RegisterActivity" >
         </activity>
-        
         <activity
-			android:name="com.carethy.activity.PasswordRecoveryActivity"
-			android:label="@string/title_activity_password_recovery"
-			android:parentActivityName="com.carethy.activity.LoginActivity">
+            android:name="com.carethy.activity.PasswordRecoveryActivity"
+            android:label="@string/title_activity_password_recovery"
+            android:parentActivityName="com.carethy.activity.LoginActivity" >
+        </activity>
+        <activity
+            android:name="com.carethy.activity.CreateMedicationActivity"
+            android:label="@string/title_activity_create_medication"
+            android:parentActivityName="com.carethy.activity.MainActivity" >
         </activity>
     </application>
 
