--- a/Carethy/AndroidManifest.xml
+++ b/Carethy/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
@@ -100,6 +101,14 @@
                 <action android:name="android.intent.action.TIMEZONE_CHANGED" />
             </intent-filter>
         </receiver>
+        
+        <service android:name="com.carethy.service.ServiceDemo" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
         
     </application>
 
